AAE-38730 Open rewrite changes