@@ -170,7 +170,7 @@ public class ConcurrentEngineUsageTest extends PluggableActivitiTestCase {
                     List<Task> taskToComplete = taskService.createTaskQuery().taskAssignee(drivingUser).listPage(0, 1);
                     tasksAvailable = !taskToComplete.isEmpty();
                     if (tasksAvailable) {
-                        retryFinishTask(taskToComplete.get(0).getId());
+                        retryFinishTask(taskToComplete.getFirst().getId());
                     }
                     finishTask = false;
                 }
