@@ -38,7 +38,7 @@ public class FinancialReportProcessTest extends PluggableActivitiTestCase {
 
         List<Task> tasks = taskService.createTaskQuery().taskCandidateUser("fozzie", FOZZIESGROUPS).list();
         assertThat(tasks).hasSize(1);
-        Task task = tasks.get(0);
+        Task task = tasks.getFirst();
         assertThat(task.getName()).isEqualTo("Write monthly financial report");
 
         taskService.claim(task.getId(), FOZZIE);
@@ -51,8 +51,8 @@ public class FinancialReportProcessTest extends PluggableActivitiTestCase {
         assertThat(tasks).hasSize(0);
         tasks = taskService.createTaskQuery().taskCandidateUser(KERMIT, KERMITSGROUPS).list();
         assertThat(tasks).hasSize(1);
-        assertThat(tasks.get(0).getName()).isEqualTo("Verify monthly financial report");
-        taskService.complete(tasks.get(0).getId());
+        assertThat(tasks.getFirst().getName()).isEqualTo("Verify monthly financial report");
+        taskService.complete(tasks.getFirst().getId());
 
         assertProcessEnded(processInstance.getId());
     }
