@@ -64,7 +64,7 @@ public class TaskRuntimeBusinessKeyOnTaskTest {
 
         securityUtil.logInAs("dean");
 
-        Task task = taskRuntime.tasks(Pageable.of(0, 10), TaskPayloadBuilder.tasks().build()).getContent().get(0);
+        Task task = taskRuntime.tasks(Pageable.of(0, 10), TaskPayloadBuilder.tasks().build()).getContent().getFirst();
 
         assertThat(task).isNotNull();
         assertThat(task.getBusinessKey()).isNotBlank();
